# ClassVR-Unity-Plugin

./: .editorconfig  CHANGELOG.md  README.md  package.json
Custom_OpenXR_Loader/: .gitignore  build.gradle  settings.gradle
Custom_OpenXR_Loader/plugin/: build.gradle
Custom_OpenXR_Loader/plugin/src/main/cpp/: CMakeLists.txt  OpenXRHook.cpp
Plugins/Android/: CVR-Unity-Java-release1.aar  CVR-Unity-Java-release4.aar  CVR-Unity-Java-release5.aar  CVR-Unity-Java-release6.aar  CVR-Unity-Java-release7.aar
Plugins/Android/classvr.androidlib/: AndroidManifest.xml
Runtime/: Avantis.ClassVR.asmdef
Runtime/Scripts/: Analytics.cs  AndroidIntent.cs  CVRProperties.cs  TiltToSpinFeature.cs
Runtime/Scripts/Client/: AndroidIntent.cs  CVRProperties.cs  ClassVRProperties.cs
Runtime/Scripts/Device/Headset655/: ClassVrHeadset655InteractionProfile.cs
Runtime/Scripts/Grpc/: AvnCloudChannel.cs  CloudFileHelper.cs  UnityWebRequestAwaiter.cs
Runtime/Scripts/Grpc/avn/connect/v1/: Activities.cs  Authorization.cs  Media.cs  (+26 more)
Runtime/Scripts/Network/: UnityWebRequestAwaiter.cs
Runtime/Scripts/Network/AVNCloud/: AVNCloudChannel.cs  Analytics.cs  FileUploader.cs
Runtime/Scripts/Networking/: UnityWebRequestAwaiter.cs
Runtime/Scripts/Networking/AVNCloud/: AVNCloudChannel.cs  FileUploader.cs
Runtime/Scripts/OpenXR/: SystemUtilsFeature.cs  TiltToSpinFeature.cs
Runtime/Scripts/Platform/Android/: AndroidIntent.cs  AvnfsUploader.cs  CVRProperties.cs  ContentProviderClient.cs  IntentProvider.cs  SystemProperties.cs
Unity_Plugin/Assets/Plugins/AvantisTiltToSpinPlugin/: package.json
(+129 files in other folders)
